# DaemonOS

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  clippy.toml  deny.toml
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  clippy.yml  fmt.yml  release.yml  rust.yml
assets/fonts/: README.md
assets/icons/: README.md
assets/logos/: README.md
assets/wallpapers/: README.md
configs/: default.toml  developer.toml  release.toml
daemon-cli/: Cargo.toml
daemon-cli/src/: app.rs  cli.rs  lib.rs  main.rs
daemon-cli/src/benchmark/: cpu.rs  disk.rs  git.rs  mod.rs  process.rs  ram.rs  rustc.rs  search.rs
daemon-cli/src/commands/: benchmark.rs  doctor.rs  info.rs  mod.rs  version.rs
daemon-cli/src/system/: cpu.rs  doctor.rs  memory.rs  mod.rs  os.rs  tools.rs
daemon-config/: Cargo.toml
daemon-config/src/: lib.rs
daemon-core/: Cargo.toml
daemon-core/src/: lib.rs
daemon-core/src/config/: mod.rs
daemon-core/src/errors/: mod.rs
daemon-core/src/events/: mod.rs
daemon-core/src/ipc/: mod.rs
daemon-core/src/logging/: mod.rs
daemon-core/src/system/: mod.rs
daemon-core/tests/: core_tests.rs
daemon-desktop/: Cargo.toml
daemon-desktop/src/: hyprland.rs  lib.rs  main.rs  startup.rs  theme.rs
daemon-desktop/src/config/: mod.rs
daemon-desktop/src/hyprland/: mod.rs
daemon-desktop/src/session/: mod.rs
daemon-desktop/src/startup/: mod.rs
daemon-desktop/src/theme/: mod.rs
daemon-desktop/src/wallpaper/: mod.rs
daemon-desktop/tests/: desktop_tests.rs
daemon-installer/: Cargo.toml
daemon-installer/src/: main.rs
daemon-ipc/: Cargo.toml
daemon-ipc/src/: lib.rs
daemon-iso/: packages.x86_64  profiledef.sh
daemon-iso/airootfs/etc/: group  passwd  shadow
daemon-iso/airootfs/etc/pacman.d/hooks/: daemonos-user.hook
daemon-iso/airootfs/etc/skel/: .bash_profile
daemon-iso/airootfs/etc/sudoers.d/: daemon
daemon-iso/airootfs/etc/systemd/system/getty@tty1.service.d/: autologin.conf
daemon-iso/airootfs/etc/sysusers.d/: daemon.conf
daemon-iso/airootfs/root/: customize_airootfs.sh
daemon-iso/efiboot/loader/entries/: 01-archiso-linux.conf  02-archiso-speech-linux.conf
daemon-iso/grub/: grub.cfg
daemon-iso/syslinux/: archiso_head.cfg  archiso_sys-linux.cfg  syslinux.cfg
daemon-launcher/: Cargo.toml
daemon-launcher/src/: main.rs
daemon-lock/: Cargo.toml
daemon-lock/src/: main.rs
daemon-notify/: Cargo.toml
daemon-notify/src/: main.rs
daemon-panel/: Cargo.toml
daemon-panel/src/: main.rs
daemon-protocol/: Cargo.toml
daemon-protocol/src/: lib.rs
daemon-service/: Cargo.toml
daemon-service/src/: lib.rs  main.rs
daemon-service/src/config/: mod.rs
daemon-service/src/ipc/: mod.rs
daemon-service/src/monitor/: mod.rs
daemon-service/src/runtime/: mod.rs
daemon-service/src/service/: mod.rs
daemon-service/tests/: service_tests.rs
daemon-settings/: Cargo.toml
daemon-settings/src/: main.rs
daemon-utils/: Cargo.toml
daemon-utils/src/: filesystem.rs  lib.rs  logging.rs  paths.rs  process.rs  system.rs
daemon-wm/: Cargo.toml
daemon-wm/src/: main.rs
docs/api/: README.md
docs/architecture/: README.md
docs/benchmarks/: README.md
docs/design/: README.md
docs/developer-guide/: README.md
docs/roadmap/: README.md
docs/specifications/: README.md
scripts/: bootstrap.sh  build-iso.sh  build.sh  clean.sh  format.sh  lint.sh  release.sh  run.sh
