[workspace]
resolver = "2"
members = [
    "daemon-cli",
    "daemon-core",
    "daemon-config",
    "daemon-ipc",
    "daemon-utils",
    "daemon-protocol",
    "daemon-desktop",
    "daemon-panel",
    "daemon-launcher",
    "daemon-settings",
    "daemon-notify",
    "daemon-lock",
    "daemon-installer",
    "daemon-service",
]

[workspace.dependencies]
daemon-core = { path = "./daemon-core" }
daemon-config = { path = "./daemon-config" }
daemon-ipc = { path = "./daemon-ipc" }
daemon-protocol = { path = "./daemon-protocol" }
daemon-utils = { path = "./daemon-utils" }
# External dependencies
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sysinfo = "0.31"
which = "6.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"

[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"
incremental = true
overflow-checks = true
debug-assertions = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
overflow-checks = false
debug = false

[profile.test]
opt-level = 1
debug = true

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = true
