[package]
name = "daemon-cli"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
daemon-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
sysinfo = { workspace = true }
which = { workspace = true }
