[package]
name = "daemon-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
daemon-config = { workspace = true }
daemon-ipc = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }
