[package]
name = "daemon-desktop"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
daemon-core = { workspace = true }
daemon-config = { workspace = true }
daemon-ipc = { workspace = true }
daemon-protocol = { workspace = true }
daemon-utils = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
which = { workspace = true }
