[package]
name = "daemon-service"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
daemon-core = { workspace = true }
daemon-config = { workspace = true }
daemon-ipc = { workspace = true }
daemon-utils = { workspace = true }
tokio = { version = "1.35", features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
